k8s/server-config.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: server-deployment
spec: 
  replicas: 3
  selector: 
    matchLabels: 
      component: server
  template: 
    metadata: 
      labels: 
        component: server 
    spec: 
      containers: 
        - name: server
          image: stephengrider/multi-server
          ports: 
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata: 
  name: server-cluster-ip-service
spec: 
  type: ClusterIP
  selector: 
    component: server
  ports: 
    - port: 5000
      targetPort: 5000
